# cle

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  MANIFEST.in  Makefile  README-SMEAGLE.md  README.md  README_MACHO.md  appveyor.yml  build.sh  cle.py  cle_bfd.c  clextract.c  dev.py  dwarfdump.sh  libcle.c  libcle_ctypes.c  pyproject.toml  reqs.txt  requirements.txt  setup.cfg  setup.py  test.py  test_requirements.txt  tests.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: basic-tests.yaml  ci.yml  macos.yml  windows.yml
bfd/: Makefile  cle_bfd.c
ccle/: Makefile  ccle.c  ccle.sh  cle.h  clextract.c  clextract.sh  dep_replace.c  libcle.c  libcle.h  libcle_static.c  libcle_static.h  load.c  run_mips_clextract.sh
cle/: __init__.py  abs_obj.py  absobj.py  address_translator.py  archinfo.py  backedcgc.py  backend.py  blob.py  cgc.py  cle-ctypes.py  cle.py  cleextractor.py  clexception.py  concrete_memory.py  elf.py  elfreader.py  errors.py  gdb.py  idabin.py  libc_utils.py  loader.py  memory.py  metaelf.py  patched_stream.py  pe.py  tls.py  utils.py
cle/backends/: __init__.py  autoblob.py  backedcgc.py  backend.py  binja.py  blob.py  cartfile.py  cgc.py  coff.py  corpus.py  elf.py  elfcore.py  externs.py  hex.py  idabin.py  ihex.py  inlined_function.py  lazy.py  metaelf.py  n64.py  named_region.py  pe.py  region.py  regions.py  relocation.py  soot.py  srec.py  static_archive.py  stm32.py  symbol.py  te.py  tls.py  uefi_firmware.py  universal2.py  xbe.py
cle/backends/cgc/: __init__.py  backedcgc.py  cgc.py
cle/backends/elf/: __init__.py  compilation_unit.py  corpus.py  decorator.py  dwarf.py  elf.py  elfcore.py  hashtable.py  location.py  lsda.py  metaelf.py  regions.py  subprogram.py  symbol.py  symbol_type.py  types.py  variable.py  variable_type.py
cle/backends/elf/parser/: __init__.py
cle/backends/elf/relocation/: __init__.py  amd64.py  arm.py  arm64.py  arm_cortex_m.py  armel.py  armhf.py  elfreloc.py  generic.py  i386.py  mips.py  mips64.py  pcc64.py  ppc.README  ppc.py  ppc64.py  riscv64.py  s390x.py  (+1 more)
cle/backends/externs/: __init__.py  externs.py
cle/backends/java/: android_lifecycle.py  apk.py  jar.py  soot.py
cle/backends/macho/: README.md  __init__.py  binding.py  dyld_types.py  encrypted_sentinel_backer.py  macho.py  macho_enums.py  macho_load_commands.py  section.py  segment.py  structs.py  symbol.py
cle/backends/minidump/: __init__.py  context.py  regions.py
cle/backends/pe/: __init__.py  pe.py  regions.py  reloc.py  stubs.py  symbol.py  symbolserver.py
cle/backends/relocations/: __init__.py  amd64.py  arm.py  arm64.py  generic.py  generic_elf.py  i386.py  mips.py  mips64.py  ppc.py  ppc64.py
cle/backends/tls/: __init__.py  elf_tls.py  elfcore_tls.py  minidump_tls.py  pe_tls.py  tls_object.py
cle/relocations/: __init__.py  amd64.py  arm.py  arm64.py  armhf.py  generic.py  generic_elf.py  i386.py  mips.py  mips64.py  ppc.py  ppc64.py
cle/structs/: __init__.py  mem_regions.py
cle/tls/: __init__.py  elf_tls.py  pe_tls.py
cle_bfd/: Makefile
docs/: api.rst  conf.py  index.rst
docs/api/: backend.rst  errors.rst  index.rst  loader.rst  relocations.rst  tls.rst  utils.rst
docs/api/backends/: binja.rst  blob.rst  cgc.rst  coff.rst  elf.rst  ihex.rst  index.rst  java.rst  macho.rst  minidump.rst  pe.rst  static_archive.rst  uefi_firmware.rst  xbe.rst
examples/: Makefile  exception.cpp  pointer-struct.cpp
examples/_exception-basic/: example.cpp
examples/allocation/: example.cpp  facts.json
examples/amalgamation/: example.cpp  facts.json
examples/array/: example.cpp  facts.json
examples/bigcall/: example.cpp  facts.json  libtest.so.json
examples/callsite/: example.cpp  facts.json
examples/callsite-as-parameter/: example.cpp  facts.json
examples/class-inheritance/: example.cpp  facts.json
examples/const/: example.cpp  facts.json
examples/empty-func/: example.cpp  facts.json
examples/enum/: Makefile  example.cpp  facts.json
examples/fixed-sized-array/: Makefile  example.cpp  facts.json
examples/function-as-parameter/: Makefile  example.cpp  facts.json
examples/function-with-pointer/: example.cpp  facts.json
examples/global-variables/: Makefile  example.cpp  facts.json
examples/inline/: example.cpp  facts.json
examples/math/: example.cpp  example.h  facts.json
examples/multiple-pointers/: example.cpp  facts.json
examples/pointer/: example.cpp  facts.json
examples/pointer-func/: example.cpp  facts.json
examples/pointer-hell/: example.cpp  facts.json
examples/pointer-struct/: facts.json
examples/pointer-to-pointer-to-structure/: example.cpp  facts.json
examples/pointer-to-struct/: example.cpp  facts.json
examples/struct-pointer-foo/: example.cpp  facts.json
examples/structure-array-structures/: example.cpp  facts.json
examples/structure-arrays-of-arrays/: example.cpp  facts.json
examples/structure-matt/: example.cpp  facts.json
examples/structure-with-structure/: Makefile  example.cpp  facts.json
examples/union/: example.cpp  facts.json
ld_audit/: Makefile  ld_audit.c
scripts/: call_clextract  get_rela_types.py
test/: test_cfg.py  test_clemory.py  test_got.py
tests/: broken_preload.py  mytest.py  test_aarch64_relocations.py  test_address_translator.py  test_amd64_relocations.py  test_arch_detect.py  test_arm_firmware.py  test_blob.py  test_cart.py  test_clemory.py  test_coff.py  test_compiler_detection.py  test_concrete_clemory.py  test_corpus.py  test_dwarf.py  test_dwarf_resiliency.py  test_elfcore.py  test_exceptions.py  test_extern.py  test_gdb.py  test_got.py  test_hex.py  test_macho.py  test_macho_bindinghelper.py  test_macho_dyld.py  test_macho_dyld_structs.py  test_macho_kext.py  test_macho_libs.py  test_macho_reloc.py  test_minidump.py  test_mips_relocations.py  test_n64.py  test_namedregion.py  test_optional_backends.py  test_overlap.py  test_patched_stream.py  test_pe.py  test_pe_coff_symbols.py  test_pe_delay_imports.py  test_pe_meta_regions.py  (+17 more)
(+18 files in other folders)
