[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cle"
description = "CLE Loads Everything (at least, many binary formats!) and provides a pythonic interface to analyze what they are and what they would look like in memory."
license = "BSD-2-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "archinfo==9.2.193",
    "arpy==1.1.1",
    "cart",
    "minidump>=0.0.10",
    "pefile",
    "pyelftools>=0.29",
    "pyvex==9.2.193",
    "pyxbe~=1.0.3",
    "pyxdia~=0.1",
    "sortedcontainers>=2.0",
    "uefi-firmware>=1.10",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://api.angr.io/projects/cle/en/latest/"
Repository = "https://github.com/angr/cle"

[project.optional-dependencies]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autodoc-typehints",
]
pcode = [
    "pypcode>=1.1"
]
testing = [
    "cffi",
    "pypcode>=1.1",
    "pytest",
    "pytest-xdist",
    "types-pefile",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "cle.__version__" }

[tool.setuptools.package-data]
cle = ["py.typed"]

[tool.uv.sources]
archinfo = { git = "https://github.com/angr/archinfo.git", branch = "master" }
pyvex = { git = "https://github.com/angr/pyvex.git", branch = "master" }

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "TID",
    "UP",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
