[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cle"
description = "CLE Loads Everything (at least, many binary formats!) and provides a pythonic interface to analyze what they are and what they would look like in memory."
license = "BSD-2-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "archinfo==9.2.222",
    "arpy==1.1.1",
    "cart",
    "minidump>=0.0.10",
    "pefile==2024.8.26",
    "pyelftools>=0.29",
    "pyvex==9.2.222",
    "pyxbe~=1.0.3",
    "pyxdia~=0.1",
    "sortedcontainers>=2.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://api.angr.io/projects/cle/en/latest/"
Repository = "https://github.com/angr/cle"

[project.optional-dependencies]
pcode = [
    "pypcode>=1.1"
]

[dependency-groups]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autodoc-typehints",
]
testing = [
    "cffi",
    "pypcode>=1.1",
    "pytest",
    "pytest-xdist",
    "setuptools", # Required for cffi runtime compilation support
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [".", "deps/uefi-firmware"]
include = ["cle*", "uefi_firmware*"]

[[tool.setuptools.ext-modules]]
name = "uefi_firmware.efi_compressor"
include-dirs = ["deps/uefi-firmware/uefi_firmware/compression/Include"]
sources = [
    "deps/uefi-firmware/uefi_firmware/compression/EfiCompressor.c",
    "deps/uefi-firmware/uefi_firmware/compression/LZMA/LzmaCompress.c",
    "deps/uefi-firmware/uefi_firmware/compression/LZMA/LzmaDecompress.c",
    "deps/uefi-firmware/uefi_firmware/compression/LZMA/SDK/C/Bra.c",
    "deps/uefi-firmware/uefi_firmware/compression/LZMA/SDK/C/Bra86.c",
    "deps/uefi-firmware/uefi_firmware/compression/LZMA/SDK/C/CpuArch.c",
    "deps/uefi-firmware/uefi_firmware/compression/LZMA/SDK/C/LzFind.c",
    "deps/uefi-firmware/uefi_firmware/compression/LZMA/SDK/C/LzmaDec.c",
    "deps/uefi-firmware/uefi_firmware/compression/LZMA/SDK/C/LzmaEnc.c",
    "deps/uefi-firmware/uefi_firmware/compression/Tiano/Decompress.c",
    "deps/uefi-firmware/uefi_firmware/compression/Tiano/EfiCompress.c",
    "deps/uefi-firmware/uefi_firmware/compression/Tiano/TianoCompress.c",
]
py-limited-api=true

[tool.setuptools.dynamic]
version = { attr = "cle.__version__" }

[tool.setuptools.package-data]
cle = ["py.typed"]

[tool.distutils.bdist_wheel]
py_limited_api = "cp312"

[tool.uv.sources]
archinfo = { git = "https://github.com/angr/archinfo.git", branch = "master" }
pyvex = { git = "https://github.com/angr/pyvex.git", branch = "master" }

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "TID",
    "UP",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
