[metadata]
name = cle
version = attr: cle.__version__
url = https://github.com/angr/cle
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = |
    CLE Loads Everything (at least, many binary formats!) and provides a
    pythonic interface to analyze what they are and what they would look like in
    memory.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pyelftools >= 0.27
    pyvex == 9.2.7.dev0
    pefile
    sortedcontainers >= 2.0
python_requires = >= 3.6
packages = find:
tests_require = cffi

[options.extras_require]
ar = arpy == 1.1.1
minidump = minidump >= 0.0.10
xbe = pyxbe == 0.0.4
testing = cffi

[options.package_data]
cle =
    py.typed
