[metadata]
name = cle
version = attr: cle.__version__
description = CLE Loads Everything (at least, many binary formats!) and provides a pythonic interface to analyze what they are and what they would look like in memory.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/cle
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
install_requires =
    archinfo==9.2.128.dev0
    cart
    pefile
    pyelftools>=0.27
    pyvex==9.2.128.dev0
    sortedcontainers>=2.0
python_requires = >=3.10
tests_require = cffi

[options.extras_require]
ar =
    arpy==1.1.1
docs =
    furo
    myst-parser
    sphinx
    sphinx-autodoc-typehints
minidump =
    minidump>=0.0.10
pcode =
    pypcode>=1.1
pdb =
    pyxdia~=0.0
testing =
    cffi
    minidump>=0.0.10
    pypcode>=1.1
    pytest
    pytest-xdist
    pyxbe~=1.0.3
uefi =
    uefi-firmware>=1.10
xbe =
    pyxbe~=1.0.3

[options.package_data]
cle =
    py.typed
